--- a/thesis/myStyle.sty
+++ b/thesis/myStyle.sty
@@ -4,6 +4,7 @@
 \usepackage{url} 						% to add url in bib
 \usepackage{tablefootnote}				% add footnotes to tables
 \usepackage{subcaption}					% for subfigures
+\usepackage{amsmath}					% for curly braces
 
 \usepackage[nogroupskip]{glossaries}	% for acronyms
 \renewcommand{\glossarysection}[2][]{}	% no title for glossary
