--- a/thesis/tex/EEG.tex
+++ b/thesis/tex/EEG.tex
@@ -110,6 +110,7 @@ In a broad sense, \gls{EEG} recording is linked to the state of the general acti
 \end{figure}
 
 \section{Visual evoked potential}
+\label{sec:VEP}
 
 In section \ref{sec:EEG} we gave a brief overview of \glspl{ERP}. Now we are going to discuss one specific \gls{ERP} called \gls{VEP}. As the name suggests, \glspl{VEP} are elicited by visual stimuli. The visual stimulus for eliciting a \gls{VEP} can be very simple, for example a white square blinking on a black computer screen.
 
@@ -119,7 +120,7 @@ Due to the posterior location of the occipital lobe, electrodes must be placed t
 
 When comparing the \glspl{VEP} elicited in the central visual field and in the peripheral vision by the same stimuli, it can be seen that the stimulation of the central visual field produces larger \glspl{VEP} \cite{VEP_size}. This allows us to present multiple visual stimuli to a subject and detect which stimulus is the subject looking at. 
 
-To make the detection of \glspl{VEP} easier, \glspl{SSVEP} are used. If the visual stimulus is presented at a constant rate and the rate is so fast that the visual pathway cannot recover before the next stimulus is presented, then the elicited response becomes continuous and it is called the \gls{SSVEP} \cite{VEP}. See figure X for an example of \gls{VEP} and \gls{SSVEP}. \glspl{SSVEP} are sinusoidal and therefore it is easier to detect it than \glspl{VEP}, which have more complex shape and are not continuous.
+To make the detection of \glspl{VEP} easier, \glspl{SSVEP} are used. If the visual stimulus is presented at a constant rate and the rate is so fast that the visual pathway cannot recover before the next stimulus is presented, then the elicited response becomes continuous and it is called the \gls{SSVEP} \cite{VEP}. See figure X for an example of \gls{VEP} and \gls{SSVEP}. \gls{SSVEP} is sinusoidal and therefore it is easier to detect it than \glspl{VEP}, which have more complex shape and are not continuous.
 
 \begin{figure}[h]
 	\centering
@@ -142,7 +143,7 @@ To make the detection of \glspl{VEP} easier, \glspl{SSVEP} are used. If the visu
 
 In section \ref{sec:neuroimaging} we briefly compared different functional neuroimaging methods and concluded that currently \gls{EEG} is most suitable for our needs. But there is a wide variety of EEG devices available. See table \ref{tab:EEG} for details. As discussed in section \ref{sec:neuroimaging}, we prefer a device that is available to the consumer.
 
-OpenBCI is an open source brain-computer interface that provides access to all the data and algorithms, which makes it good for specialists, but it is not easy to use for a non-specialist. From the more consumer-friendly devices, Emotiv EPOC seems to offer good price-quality relationship.
+OpenBCI is an open source \gls{BCI} that provides access to all the data and algorithms, which makes it good for specialists, but it is not easy to use for a non-specialist. From the more consumer-friendly devices, Emotiv EPOC seems to offer good price-quality relationship. Therefore, we will choose Emotiv EPOC for controlling a robot.
 
 Emotiv EPOC has 16 electrodes, two of which are reference electrodes. Reference electrodes have two different possible locations: P3 and P4 or locations behind the ears. Other electrodes have fixed locations AF3, AF4, F3, F4, F7, F8, FC5, FC6, P7, P8, T7, T8, O1, O2. See figure \ref{fig:electrode_locations} for illustration. Emotiv EPOC has a sampling rate of \SI{128}{Hz}, an internal sampling rate of \SI{2048}{Hz} and an \gls{ADC} resolution of 16 bit. 
 
@@ -171,7 +172,7 @@ An \gls{ADC} device converts continuous voltage to the sequence of discrete valu
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\textwidth]{electrode_locations.png}
+	\includegraphics[width=0.6\textwidth]{electrode_locations.png}
 	\caption{Electrode locations used by Emotiv EPOC\protect\footnotemark}
 	\label{fig:electrode_locations}
 \end{figure}
